# RetailPriceFetch

./: Readme.MD
rn_price_fetch/: Makefile  README.md  pyproject.toml
rn_price_fetch/src/amazon_price_fetch/: __init__.py  __main__.py  models.py
rn_price_fetch/src/amazon_price_fetch/config/: __init__.py  default.yml  loader.py
rn_price_fetch/src/amazon_price_fetch/fetch/: __init__.py  http_client.py  rate_limiter.py
rn_price_fetch/src/amazon_price_fetch/parse/: __init__.py  amazon_search_parser.py  base_parser.py  selectors.py
rn_price_fetch/src/amazon_price_fetch/pipeline/: __init__.py  search_service.py  storage.py  url_builder.py
rn_price_fetch/src/amazon_price_fetch/utils/: __init__.py  cache.py  logger.py  validators.py
rn_price_fetch/tests/: test_basic.py
